[package]
name = "uuid-cluster"
version = "0.2.0"
authors = ["Noah Encke <noencke@microsoft.com>"]
description = "UUID cluster handling utilities"
license = "MIT/Apache-2.0"
repository = "https://github.com/noencke/uuid-cluster"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
base64 = "0.13"
flate2 = "1.0"
byteorder = "1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is ~1K in code size compared to the default allocator's ~10K.
# It is slower than the default allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
lto = true
# opt-level = 's'
opt-level = 'z'

[package.metadata.wasm-pack.profile.release]
#wasm-opt = ['-Oz']
# https://www.reddit.com/r/rust/comments/kjcrxu/is_rust_code_compiled_into_webassembly_just_that/
# "-O4"
wasm-opt = ["-Oz", "--enable-mutable-globals"]




[features]
default = [ "wee_alloc" ] #"console_error_panic_hook"
