[package]
name = "uuid-cluster"
version = "0.2.1"
authors = ["Noah Encke <noencke@microsoft.com>"]
description = "UUID cluster handling utilities"
license = "MIT/Apache-2.0"
repository = "https://github.com/noencke/uuid-cluster"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
base64 = "0.13"
flate2 = "1.0"
byteorder = "1"
wee_alloc = { version = "0.4.5", optional = true, default-features = false }

[features]
default = ["wee_alloc"]
