[package]
name = "uuid-cluster"
version = "0.2.1"
authors = ["Noah Encke <noencke@microsoft.com>"]
description = "UUID cluster handling utilities"
license = "MIT/Apache-2.0"
repository = "https://github.com/noencke/uuid-cluster"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
flate2 = "1.0"
wee_alloc = { version = "0.4.5" }
